kubernetes/Cluster-Int-Temp/deployments/home-automation/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: esphome
    namespace: home-automation
spec:
    replicas: 0
    progressDeadlineSeconds: 600
    revisionHistoryLimit: 2
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: esphome
    template:
        metadata:
            labels:
                app: esphome
        spec:
            containers:
                - name: esphome
                  image: ghcr.io/esphome/esphome:2024.5.5
                  volumeMounts:
                    - name: pvc
                      mountPath: /config
                      subPath: config
            volumes:
                - name: pvc
                  persistentVolumeClaim:
                    claimName: esphome
